--- a/_draft/2016-02-24-版本兼容性问题.md
+++ b/_draft/2016-02-24-版本兼容性问题.md
@@ -37,6 +37,7 @@ Guava的11和18版本的API更改很大，比如`StopWatch`的创建和时间获
 Hadoop的Guava升级较为简单，社区中有现成的[patch](https://issues.apache.org/jira/browse/HADOOP-10101)，但是并未release，可以自行打补丁并编译安装。
 
 ## Spark 依赖升级
+Spark的对Guava的依赖并没有涉及到变动的那部分API，直接在`pom.xml`里面把Guava的版本升级到18.0就能编译，之后的部署暂且不表。
 
 ## 结论
 没事别随便改API，真有必要的话，也请换个名字，要不会给使用方带来巨大的麻烦。
