--- a/_posts/2016-04-06-数董会分享.md
+++ b/_posts/2016-04-06-数董会分享.md
@@ -84,3 +84,6 @@ categories: tech
 > 最后一点，因为数据的融合和使用变得越来越简单，不管是我们这套系统将来开放出来给大家共同使用，还是各家有各家类似的产品，它肯定是变得越来越简单、越来越容易的。现在还有数据壁垒和数据获取的困难，但确实是在好转的。如果说大家有各种渠道的话可以及早的布局来获得这些数据，长久看来，在互联网金融或者说是更广的领域上可能会有更大的发言权。
 
 > 行，我的分享就是这些，下面是我的邮箱，大家感兴趣的话可以给我发信或者可以去参观。
+
+## PPT
+PPT 在[这里](/assets/ppt/0326.pdf)
