--- a/_posts/2016-08-27-pmcaff.md
+++ b/_posts/2016-08-27-pmcaff.md
@@ -13,4 +13,4 @@ categories: tech
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/Mjr2CAECcDUhp3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/SongHou/827pmcaff" title="8月27日pmcaff分享" target="_blank">8月27日pmcaff分享</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/SongHou">Song Hou</a></strong> </div>
 
  
-(PDF版本可在这里下载)[/assets/8月27日pmcaff分享.pdf]
+[PDF版本可在这里下载](/assets/8月27日pmcaff分享.pdf)
