2016-08-29-pmcaff-speech.md

--- a/_posts/2016-08-27-pmcaff.md
+++ b/_posts/2016-08-27-pmcaff.md
@@ -3,7 +3,7 @@ layout: post
 title: PMCAFF 大数据风控的原理与应用 姨搜分享活动PPT
 excerpt: 这里面有我8月27日PMCAFF的分享活动中的PPT。
 modified: 2016-08-27
-tags: [姨搜, 大数据, 风控, 原理, 应用]
+tags: [姨搜, 大数据, 风控, 原理, 应用, 宜信]
 comments: true
 categories: tech
 ---
