--- a/_posts/2017-03-15-hive-llap.md
+++ b/_posts/2017-03-15-hive-llap.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Hive Llap尝试（0）
+excerpt: Hive在2.0版本之后添加一个llap的功能，加速SQL语句执行，本文描述了如何进行配置以及途中遇到的问题。
 modified: 2017-03-15
 tags: [大数据, Hadoop, Hive, Llap]
 comments: true
@@ -29,7 +30,7 @@ categories: tech
    <tr>
     <td>tez</td>
     <td>0.8.4</td>
-    <td>[tez安装](https://tez.apache.org/install.html)，修改依赖的hadoop版本和guava版本，重新编译，<br>
+    <td><a href="https://tez.apache.org/install.html">tez安装</a>，修改依赖的hadoop版本和guava版本，重新编译，<br>
    在tez-dist目录中，找到tez-0.8.4-minimal.tar.gz文件。</td>
    </tr>
    <tr>
@@ -40,12 +41,12 @@ categories: tech
    <tr>
     <td>zookeeper</td>
     <td>3.4.6</td>
-    <td>[zookeeper安装](https://zookeeper.apache.org/doc/r3.4.8/zookeeperStarted.html#sc_RunningReplicatedZooKeeper)</td>
+    <td><a href="https://zookeeper.apache.org/doc/r3.4.8/zookeeperStarted.html#sc_RunningReplicatedZooKeeper">zookeeper安装</a></td>
    </tr>
    <tr>
     <td>slider</td>
     <td>slider-0.81.1-incubating</td>
-    <td>[slider安装配置](https://slider.incubator.apache.org/docs/getting_started.html#install)
+    <td><a href="https://slider.incubator.apache.org/docs/getting_started.html#install">slider安装配置</a>
     ，安装完成后将bin目录加入到$PATH变量中</td>
    </tr>
    <tr>
@@ -179,14 +180,13 @@ slider create llap_service --resources $BASEDIR/resources.json --template $BASED
  <li>找不到相应的hadoop类</li>
 </ul> 
 
-	1.1 缺少配置
-这个可以结合日志和代码，可以发现缺少什么配置，在hive-site.xml文件加入相关的配置项即可。
-
-	1.2 hadoop， hive之间类冲突
-由于我们给予hadoop上做了一些改进，导致有一些找不到类方法以及类定义不存在的一些问题，解决这个问题是，按照指定的版本重新编译tez，编译没出现问题，选择minimal压缩包作为tez的安装路径并上传到hdfs上。
-
-	1.3 找不到相应的hadoop类
+  1.1 缺少配置
+这个可以结合日志和代码，可以发现缺少什么配置，在hive-site.xml文件加入相关的配置项即可。<br/>
+  1.2 hadoop， hive之间类冲突
+由于我们给予hadoop上做了一些改进，导致有一些找不到类方法以及类定义不存在的一些问题，解决这个问题是，按照指定的版本重新编译tez，编译没出现问题，选择minimal压缩包作为tez的安装路径并上传到hdfs上。<br>
+  1.3 找不到相应的hadoop类
 在Hadoop环境中找不到hadoop类，这确实是一个很诡异的问题。通过调研发现，llap进程的启动是通过一个runLlapDaemon.sh脚本命令启动的，而这个脚本是在```llap-slider-ddMMyyyy/llap-ddMMyyyy.zip``` 这个文件中，在解压后的package/files目录中，可以找到一个llap-ddMMyyyy.tar.gz压缩包，解压这个tar.gz的压缩包，发现在同级的目录下出现bin目录，这就是```runLlapDaemon.sh```脚本的位置。
+
 可以发现，在这个启动脚本中对于CLASSPATH的定义：
 
 	CLASSPATH=${LLAP_DAEMON_CONF_DIR}:${LLAP_DAEMON_HOME}/lib/*:${LLAP_DAEMON_HOME}/lib/tez/*:${LLAP_DAEMON_HOME}/lib/udfs/*:.
@@ -202,7 +202,8 @@ slider create llap_service --resources $BASEDIR/resources.json --template $BASED
 
 	
 	2, 查询效果没明显差异
-将表数据存储方式改成以列式来存储。 Llap默认使用off-heap的方式来缓存数据，在使用如下命令生成脚本时，```hive --service llap --name llap_service --size 4g --loglevel INFO  --cache 4g```， 提示
+	
+<br/>将表数据存储方式改成以列式来存储。 Llap默认使用off-heap的方式来缓存数据，在使用如下命令生成脚本时，```hive --service llap --name llap_service --size 4g --loglevel INFO  --cache 4g```， 提示
 
 	java.lang.IllegalArgumentException: Cache size (4.00GB) has to be smaller than the container sizing (4.00GB)
 		at com.google.common.base.Preconditions.checkArgument(Preconditions.java:92)
